--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
               </li>
               <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/b_p_eventix2.jpg" alt="Portfolio-image"/>
+                <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb2.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>Alert Applet</h2>
@@ -138,11 +138,23 @@
               </li>
 
               <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-1"><a><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>SONUS</h2>
+                        <p>Personalised Music Instrument</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
                 <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb2.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>EMG-based AAC</h2>
-                        <p>AAC for people with ALS</p>
+                        <p>Augmentative and Alternative Communication</p>
                       </div>
                     </div>
                   </a>
@@ -150,11 +162,11 @@
               </li>
 
               <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+                <div class="masonry-item background-color-2"><a><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
-                        <h2>Multi-patient ICU Monitor</h2>
-                        <p>ICU monitor</p>
+                        <h2>ICU Central Monitor</h2>
+                        <p>Multi-patient Monitor</p>
                       </div>
                     </div>
                   </a>
