comments and headers

--- a/eventix.html
+++ b/eventix.html
@@ -53,13 +53,14 @@
             <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
             <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
             <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
-            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
-            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+            <li class="delay-5"><a href="sonus.html">Sonus</a></li>
+            <li class="delay-6"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li>
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
     </header>
-    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/b_p_eventix3.jpg" class="header-introduction-small text-center background-image">
+    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/eventix/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
           <h2 style="line-height: 1em;">DESIGNING FOR A TICKETSHOP DASHBOARD</h2>
@@ -130,13 +131,13 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">RESEARCH</h2>
+            <h2 style="line-height: 1.05em;">USER RESEARCH</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.<!--The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.--></p>
+          <h3 class="os-animation">INTERVIEWS, SURVEY, PERSONAS</h3>
+          <!--p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.<!The current data that is presented on the dashboard feels insufficient for event organizers:<br>The information on the dashboard doesn’t fully communicate their needs.<br>There’s an overload of graphs.<br>The type of data visualisation doesn’t serve the needs - it has no added value for them.<br>Some graphs are not used at all because they don’t understand it.></p-->
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/persona.jpg" alt="Project Image"/></div>
@@ -154,8 +155,8 @@
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
+          <h3 class="os-animation">KEEPING THE USER UPDATED</h3>
+          <!--p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
               <div class="row"><img src="assets/images/eventix/scheme.jpg" alt="Project Image"/></div>
@@ -190,13 +191,13 @@
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">CHECK OTHER</span>
-              <h3 style="padding-top: 0.1em;">PROJECTS</p></h3>
+              <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -204,16 +205,16 @@
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
@@ -222,7 +223,8 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+
+            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -231,9 +233,20 @@
                   </div>
                 </a>
               </div>
+            </li-->
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -244,7 +257,7 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -263,7 +276,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <h2 style="padding-top: 0.1em;">CONTACT ME</p></h2>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
