--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div></a></div>
               </li>
               <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+                <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>De Kooktafel</h2>
@@ -115,7 +115,7 @@
                     </div></a></div>
               </li>
               <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+                <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>DoChange</h2>
