--- a/sonus.html
+++ b/sonus.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Designing for AAC users | Daniel Mariano</title>
+    <title>Sonus | Daniel Mariano</title>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -29,14 +29,12 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/theme.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="assets/css/floatbtn.css" type="text/css" media="all"/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="loading text-center vertical-middle">
       <div class="row"><img src="assets/images/loader.gif" width="60" alt="Loader logo" class="loader"/>
       </div>
     </div>
-
     <header class="floating-header">
       <div class="floating-menu-btn">
         <div class="floating-menu-toggle-wrap">
@@ -62,11 +60,10 @@
         </nav><!-- .main-navigation -->
       </div>
     </header>
-
-    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/aac/hero.jpg" class="header-introduction-small text-center background-image">
+    <section style="background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url(assets/images/sonus/hero.jpg" class="header-introduction-small text-center background-image">
       <div class="container vertical-middle text-center">
         <div class="row section-head section-head-white">
-          <h2 style="line-height: 1em;">DESIGNING FOR A AAC USER WITH ALS</h2>
+          <h2 style="line-height: 1em;">SONUS: PERSONALISED MUSIC INSTRUMENT</h2>
           <ul class="breadcrumb">
             <li><a href="index.html">HOME</a></li>
             <li><a href="">PROJECTS</a></li>
@@ -78,37 +75,37 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGNING FOR A AAC USER WITH ALS</h2>
+            <h2 style="line-height: 1.05em;">SONUS: PERSONALISED MUSIC INSTRUMENT</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
           <div data-os-animation="fadeIn" data-os-animation-delay="0s" class="col-md-4 margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-flag1"></i>
-                <h4>Client & Place</h4>
-                <p style="font-size: 16px">Private<br>Brazil</p>
+                <h4>Project & Place</h4>
+                <p style="font-size: 16px">Case Study<br>Netherlands</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-4 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-calendar"></i>
                 <h4>Date & Duration</h4>
-                <p style="font-size: 16px">2015<br>4 weeks</p>
+                <p style="font-size: 16px">2017<br>10 days</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-4 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-world"></i>
                 <h4>Teamed up with</h4>
-                <p style="font-size: 16px">Physiotherapist<br>Speech-Language Pathologist<br>Biomedical Engineer</p>
+                <p style="font-size: 16px">Two Industrial Designers<br>Interaction Designer</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
-                <p style="font-size: 16px">Design an alternative controller for a software that supports communication for people with severe motor dysfunction.</p>
+                <p style="font-size: 16px">Design a personal musical instrument to enable musical illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves.</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-gear"></i>
                 <h4>Methods & Tools</h4>
-                <p style="font-size: 16px">Arduino Prototyping, Benchmarking, Contextual Inquiry, Data Analysis, Expert Review, Multidisciplinary Collaboration, .NET Prototyping, Signal Processing, Task Analysis, User Test</p>
+                <p style="font-size: 16px">9-DOF Accelerometer Sensor, Arduino Prototyping, Design review, Design thinking, Expert review, Heuristic evaluation, Multidisciplinary collaboration, Tangible Prototyping</p>
               </div>
             </div>
         </div>
@@ -119,43 +116,14 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">BRIEFING</h2>
+            <h2 style="line-height: 1.05em;">DESIGN CHALLENGE</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">ABOUT THE CLIENT AND THE CASE</h3>
-          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">According to the WHO, over 1 billion people globally experience disability. From those, a significant number have severe motor dysfunction due to a variaty of causes, such as Spinal Cord Injury, Amyotrophic Lateral Sclerosis (ALS), and so forth. In most cases, people have severe speech impairment, drastically reducing their independence. Health organization and scientific research has proved that rehabilitation and assistive devices can enable people with disabilities to became more independent and increase their quality of life. This case presents the design of a communication-aid device for an individual with ALS.</p>
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/theoryofeverything.jpg" alt="Project Image"/></div>
-            </div>
-          </div>
-      </div>
-    </section>
-    
-    <section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">EMG-BASED AAC</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>
-        <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
-          <!--p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
-          <div class="portfolio-single-content">
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/hardware.jpg" alt="Project Image"/></div>
-            </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/schematic.jpg" alt="Project Image"/></div>
-            </div>
-            <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-12 margin-top os-animation">
-              <div class="row"><img src="assets/images/aac/app.jpg" alt="Project Image"/></div>
-            </div>
-          </div>
+          <h3 class="os-animation">BRIEFING</h3>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Jam sessions are a nice social activities where people such as young adults do not only show their musical skills, but also produce music together and get a connected feeling with each other that can enhance the group dynamics. A music illiterate in the group however would feel left out in this scenario. That person could maybe only tap to the beat, or play the tambourine, also to mimic the beat, but that’s where it stops. The tambourine does not always fit the sound that the band is playing and it can quite a monotonous interaction with the instrument. To solve this problem we aim to design a personalised musical instrument to enable young adults who are music illiterates in friendly social gatherings to produce meaningful sounds in order to express themselves artistically.
+          </p>
       </div>
     </section>
 
@@ -163,14 +131,26 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">DESIGN OUTCOMES</h2>
+            <h2 style="line-height: 1.05em;">TANGIBLE PROTOTYPE</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">USER TEST OUTCOMES AND DESIGN RECEOMENDATIONS</h3>
-          <!--p class="os-animation text-left" stat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p-->
-          <iframe style="padding-top: 1em; padding-bottom: 2em;" class="col-sm-12" src="https://player.vimeo.com/video/244571225" width="3yle="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidat75" height="650" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <h3 class="os-animation">WHAT WE DID</h3>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">The product is a handheld device that provides haptic direct manipulation as there are different elements on the product, such as the volume, the knob and the different sound modules. It does not provide haptic feedback however, but rather visual (light) and auditorial feedback. Sonus provides an active experience as the user can use small movements by hand and big arm movements to control the music, and naturally move the entire body to engage with the music (Spatial Interaction). The user has to explore which movement belongs to which sound effect (performative action). The interaction with Sonus is lightweight (Tangible Manipulation) as it has a low learning curve. The user has a low threshold to explore the functionalities as the sound immediately reacts to the movement. </p>
+          <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">As described in the MCRpd interaction model, there are three main key characteristics of tangible interfaces. First, there is the mental model. In the concept of Sonus, the users’ movement guide the music. Normally, you should press a key or touch a string to produce a sound but only experienced musicians can relate notes to corresponding keys or strings. Sonus links the movement directly to the music. The tempo that you move the device, determines the tempo of the music. Second, control of the device. Sonus uses physical representations for control. The user can add an instrument by attaching a sound module to the device. In this way the user has a clear overview of the instruments he or she is controlling. Finally, the link between physical and digital representations. For this concept the digital respresentation is the sound and the light that is the output of the interaction with the device.</p>
+          <iframe src="https://player.vimeo.com/video/247112834" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+            <h2 style="line-height: 1.05em;">ELECTRONIC PROTOTYPE</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+        </div>          
       </div>
     </section>
 
@@ -223,7 +203,7 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -232,9 +212,9 @@
                   </div>
                 </a>
               </div>
-            </li>
+            </li-->
 
-            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -243,7 +223,7 @@
                   </div>
                 </a>
               </div>
-            </li-->
+            </li>
 
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
@@ -289,6 +269,7 @@
         </div>
       </div>
     </section>
+
     <script src="assets/js/packages.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/map.js"></script>
