--- a/corbion.html
+++ b/corbion.html
@@ -53,8 +53,9 @@
             <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
             <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
             <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
-            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
-            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+            <li class="delay-5"><a href="sonus.html">Sonus</a></li>
+            <li class="delay-6"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li>
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
@@ -185,67 +186,35 @@
       </div>
     </section-->
 
-    <!--footer>
-      <div class="container">
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 text-center os-animation">
-          <div class="section-head"> 
-            <h4>NEWSLETTER</h4>
-            <p>Subscribe to our newsletter to receive news, updates	and the latest projects we are working on.</p>
-          </div>
-        </div>
-        <div data-os-animation="fadeInUp" data-os-animation-delay="0s" class="col-md-12 margin-top margin-bottom os-animation">
-          <form class="newsletter-form text-center">
-            <input placeholder="YOUR EMAIL ADDRESS..." class="form-control"/>
-            <button type="submit">I'M IN</button>
-            <div class="col-md-12 text-center margin-top"><small>You have our word, no spam. Ever.</small></div>
-          </form>
-        </div>
-        <div class="col-md-12 margin-top">
-          <hr/>
-        </div>
-        <div class="col-md-6 text-left small-screen-text-center">
-          <div class="footer-message">
-            <p>2015 © AVOIR - Crafted by Andrewch</p>
-          </div>
-        </div>
-        <div class="col-md-6 text-right small-screen-text-center">
-          <ul class="social-icons">
-            <li><a href="#">DRIBBBLE</a></li>
-            <li><a href="#">BEHANCE</a></li>
-            <li><a href="#">TWITTER</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer-->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">CHECK OTHER</span>
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+              <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-2 os-animation">
+            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
                     </div>
                   </div></a></div>
-            </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+            </li-->
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
@@ -254,7 +223,8 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -265,7 +235,18 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -276,7 +257,7 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -295,7 +276,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <h2 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h2>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
