--- a/intel.html
+++ b/intel.html
@@ -53,8 +53,9 @@
             <li class="delay-2"><a href="reach.html">De Kooktafel</a></li>
             <li class="delay-3"><a href="dochange.html">DoChange Dashboard</a></li>
             <li class="delay-4"><a href="eventix.html">Eventix Dashboard</a></li>
-            <li class="delay-5"><a href="aac.html">EMG-based AAC</a></li>
-            <li class="delay-6"><a href="intel.html">Multi-patient ICU Monitor</a></li>
+            <li class="delay-5"><a href="sonus.html">Sonus</a></li>
+            <li class="delay-6"><a href="aac.html">EMG-based AAC</a></li>
+            <li class="delay-7"><a href="intel.html">Multi-patient ICU Monitor</a></li>
           </ul><!-- .menu -->
         </nav><!-- .main-navigation -->
       </div>
@@ -190,13 +191,13 @@
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">CHECK OTHER</span>
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">PROJECTS</p></h3>
+              <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
           <ul class="masonry-wrap">
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.1s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -204,16 +205,16 @@
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/b_p_reach.jpg" alt="Portfolio-image"/>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-2 os-animation">
-              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/b_p_dochange.jpg" alt="Portfolio-image"/>
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
                       <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
@@ -222,7 +223,8 @@
                 </a>
               </div>
             </li>
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -233,7 +235,18 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-2 os-animation">
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
+              <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+                  <div class="masonry-item-overlay">
+                    <div class="masonry-item-overlay-inner">
+                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+
+            <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -244,7 +257,7 @@
               </div>
             </li>
 
-            <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-2 os-animation">
+            <!--li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
@@ -253,7 +266,7 @@
                   </div>
                 </a>
               </div>
-            </li>
+            </li-->
           </ul>
         </div>
       </div>
@@ -263,7 +276,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-              <h3 style="padding-top: 0.1em; font-size: 6.0em;">CONTACT ME</p></h3>
+              <h2 style="padding-top: 0.1em; ">CONTACT ME</h2>
               <p>I'm looking for a full-time job. You can reach out via e-mail or phone.</p>
               <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
           </div>
