--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                       </div>
                     </div></a></div>
               </li>
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-lg-6 os-animation">
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
                 <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
@@ -125,7 +125,7 @@
                   </a>
                 </div>
               </li>
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
                 <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb2.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
@@ -137,8 +137,8 @@
                 </div>
               </li>
 
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-1"><a><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.5s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-2"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>SONUS</h2>
@@ -149,8 +149,8 @@
                 </div>
               </li>
 
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb2.jpg" alt="Portfolio-image"/>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.6s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>EMG-based AAC</h2>
@@ -161,12 +161,24 @@
                 </div>
               </li>
 
-              <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-6 os-animation">
-                <div class="masonry-item background-color-2"><a><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.7s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-4"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                     <div class="masonry-item-overlay">
                       <div class="masonry-item-overlay-inner">
                         <h2>ICU Central Monitor</h2>
                         <p>Multi-patient Monitor</p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </li>
+
+              <li data-os-animation="fadeIn" data-os-animation-delay="0.8s" class="col-lg-6 os-animation">
+                <div class="masonry-item background-color-3"><a class="page-scroll" href="#contact"><img src="assets/images/me/tb.jpg" alt="Portfolio-image"/>
+                    <div class="masonry-item-overlay">
+                      <div class="masonry-item-overlay-inner">
+                        <h2>Let's work together!</h2>
+                        <p></p>
                       </div>
                     </div>
                   </a>
@@ -177,7 +189,7 @@
         </div>
     </section>
 
-    <section class="section section-black text-center">
+    <section id="contact" class="section section-black text-center">
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
