--- a/eventix.html
+++ b/eventix.html
@@ -186,13 +186,14 @@
       </div>
     </section>
 
+    <!--Check other projects -->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">CHECK OTHER</span>
               <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
-              <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
@@ -201,7 +202,7 @@
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
+                      <h2>Op Assistant</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -209,7 +210,7 @@
               <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
+                      <h2>De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -217,51 +218,47 @@
               <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
+                      <h2>DoChange</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <!--li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Alert Applet</h2>
+                      <h2>Alert Applet</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li-->
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
-              <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
+              <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                      <h2>Sonus</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">AAC for people with ALS</h2>
+                      <h2>AAC for people with ALS</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Multi-patient ICU Monitor</h2>
+                      <h2>Multi-patient ICU Monitor</h2>
                     </div>
                   </div>
                 </a>
