--- a/reach.html
+++ b/reach.html
@@ -129,6 +129,7 @@
               <div class="row"><img src="assets/images/reach/lokaalplus.jpg" alt="Project Image"/></div>
             </div>
           </div>
+        </div>
       </div>
     </section>
 
@@ -137,11 +138,12 @@
         <div class="col-md-12 text-center">
           <div class="section-head">
             <h2 style="line-height: 1.05em;">USER RESEARCH</h2>
+            <h3 class="os-animation">WHAT WE DID</h3>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
         <div data-os-animation="fadeIn" data-os-animation-delay="1.0s" class="col-md-12 text-block text-center">
-          <h3 class="os-animation">WHAT WE DID</h3>
+          
           <p class="os-animation text-left" style="font-size: 1.4em; padding-top: 1.2em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborume.</p>
           <div class="portfolio-single-content">
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-12 margin-top os-animation">
@@ -212,13 +214,14 @@
       </div>
     </section-->
 
+    <!--Check other projects -->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
             <div class="section-head">
               <span style="font-size: 1.1em;">CHECK OTHER</span>
               <h2 style="padding-top: 0.1em;">PROJECTS</p></h2>
-              <img src="assets/images/section-decor-white.png" width="60" alt="Divider"/>
+              <img src="assets/images/section-decor-black.png" width="60" alt="Divider"/>
             </div>
           </div>
         <div class="col-md-10 col-md-offset-1">
@@ -227,7 +230,7 @@
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
+                      <h2>Op Assistant</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -235,7 +238,7 @@
               <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
+                      <h2>De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li-->
@@ -243,51 +246,47 @@
               <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
+                      <h2>DoChange</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Alert Applet</h2>
+                      <h2>Alert Applet</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                      <h2>Sonus</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">AAC for people with ALS</h2>
+                      <h2>AAC for people with ALS</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Multi-patient ICU Monitor</h2>
+                      <h2>Multi-patient ICU Monitor</h2>
                     </div>
                   </div>
                 </a>
