--- a/sonus.html
+++ b/sonus.html
@@ -131,7 +131,29 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <div class="section-head">
-            <h2 style="line-height: 1.05em;">TANGIBLE PROTOTYPE</h2>
+            <h2 style="line-height: 1.05em;">PROTOTYPING</h2>
+            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
+          </div>
+          <div class="portfolio-single-content">
+            <h3 class="os-animation">CAPTURING MOVEMENT AND CONVERTING INTO MUSIC AND EMOTIONS</h3>
+            <div class="portfolio-single-content">
+              <div data-os-animation="fadeIn" data-os-animation-delay="0.1ss" class="col-md-12 margin-top os-animation">
+                <div class="row"><img src="assets/images/sonus/scheme.jpg" alt="Project Image"/></div>
+              </div>
+              <div data-os-animation="fadeIn" data-os-animation-delay="0.2s" class="col-md-12 margin-top os-animation">
+                <div class="row"><img src="assets/images/sonus/joystick.jpg" alt="Project Image"/></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section-white">
+      <div class="container">
+        <div class="col-md-12 text-center">
+          <div class="section-head">
+            <h2 style="line-height: 1.05em;">SONUS</h2>
             <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
           </div>
         </div>
@@ -143,17 +165,7 @@
       </div>
     </section>
 
-    <section class="section section-white">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <div class="section-head">
-            <h2 style="line-height: 1.05em;">ELECTRONIC PROTOTYPE</h2>
-            <img src="assets/images/section-decor-black.png" width="40" alt="Divider"/>
-          </div>
-        </div>          
-      </div>
-    </section>
-
+    <!--Check other projects -->
     <section class="section section-black">
       <div class="container-fluid">
         <div class="col-md-12 text-center margin-bottom">
@@ -169,7 +181,7 @@
               <div class="masonry-item background-color-1"><a href="corbion.html"><img src="assets/images/corbion/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Op Assistant</h2>
+                      <h2>Op Assistant</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -177,7 +189,7 @@
               <div class="masonry-item background-color-2"><a href="reach.html"><img src="assets/images/reach/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">De Kooktafel</h2>
+                      <h2>De Kooktafel</h2>
                     </div>
                   </div></a></div>
             </li>
@@ -185,51 +197,47 @@
               <div class="masonry-item background-color-3"><a href="dochange.html"><img src="assets/images/dochange/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">DoChange</h2>
+                      <h2>DoChange</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-4"><a href="eventix.html"><img src="assets/images/eventix/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Alert Applet</h2>
+                      <h2>Alert Applet</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <!--li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="sonus.html"><img src="assets/images/sonus/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Sonus</h2>
+                      <h2>Sonus</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li-->
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-1"><a href="aac.html"><img src="assets/images/aac/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">AAC for people with ALS</h2>
+                      <h2>AAC for people with ALS</h2>
                     </div>
                   </div>
                 </a>
               </div>
             </li>
-
             <li data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-lg-4 os-animation">
               <div class="masonry-item background-color-2"><a href="intel.html"><img src="assets/images/intel/tb.jpg" alt="Portfolio-image"/>
                   <div class="masonry-item-overlay">
                     <div class="masonry-item-overlay-inner">
-                      <h2 style="padding-top: 3em; font-size: 1em;">Multi-patient ICU Monitor</h2>
+                      <h2>Multi-patient ICU Monitor</h2>
                     </div>
                   </div>
                 </a>
